Convert report to HTML and replace images for Task 2

--- a/Assignment1/public_html/index.html
+++ b/Assignment1/public_html/index.html
@@ -6,6 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <a href="a1.html">Assignment 1</a>
+        <a href="a1_report.html">Assignment 1</a>
     </body>
 </html>
