Add individual part

--- a/Assignment1/public_html/a1_report.html
+++ b/Assignment1/public_html/a1_report.html
@@ -56,8 +56,6 @@
             right corner, as well as setting its attachment so that it scrolls with the body. When the document
             was loaded, we used jQuery to set the class on the body.
         </p>
-        <p class="todo">interesting pictures</p>
-
         <p class="section">Task 3 - Visualisations</p>
         <p class="subsection"><a href="http://scaleofuniverse.com/">Scale of the Universe</a></p>
         <p>
@@ -126,5 +124,32 @@
             of colours or icons mean is difficult. The community-based approach can also lead to malicious manipulation.
             Unclear language (layers, query features, GPS traces) with no immediate explanation.
         </p>
+        
+        <p class="section">Task 4 - Individual parts</p>
+        <p class="subsection">Erik</p>
+        <p>
+            I would like to see criminal rates along with the types of crimes commited on the map. The countries would
+            be coloured to indicate the crime rates and small pie charts would appear to show the relative frequencies
+            between the types of crimes committed. It would also be possible to switch the main colouring of the countries
+            to be based on a specific type of crime. The idea would be to identify the 'safe' and 'dangerous' countries/areas
+            on the planet. Although charts with crime rates exist, crime rates for the individual crime types are more
+            difficult to come by and I could not find any statistics that would combine the different types.
+        </p>
+        <p>
+            I could not find a complete dataset for the entire world, but I did find some country specific statistics. This
+            means that the data would have to be gathered individually for every country and most likely normalised. Chances
+            are also high that many countries will not have this data available, or not in good enough detail.
+        </p>
+        <p>
+            Here is an example visualisation that illustrates what I have in mind:
+        </p>
+        <p>
+            <img src='http://support2.dundas.com/Articles/1093/PieChartOnMap.png' alt='Pie charts on a map'>
+        </p>
+        <p>
+            My version, however, could be navigated. Furthermore, when zooming out, certain countries could be grouped
+            together, in which case the pie charts would also reflect the aggregated results for the given area.
+        </p>
+        <p class="subsection">Rasmus</p>
     </body>
 </html>
