New dataset + curvier lines

--- a/Assignment2/public_html/a2.html
+++ b/Assignment2/public_html/a2.html
@@ -10,7 +10,7 @@
         </style>
 
         <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
-        <script type="text/javascript" src="station_bp.js"></script>
+        <script type="text/javascript" src="station_data.js"></script>
         <script type="text/javascript" src="a2.js"></script>
     </head>
     <body>
