--- a/Assignment2/public_html/a2.html
+++ b/Assignment2/public_html/a2.html
@@ -3,12 +3,7 @@
     <head>
         <title>Assignment 2</title>
         <meta charset="UTF-8">
-        <style type="text/css">
-            #chart {
-                border:1px solid blue;
-            }
-        </style>
-
+        <link rel="stylesheet" type="text/css" href="a2.css" />
         <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
         <script type="text/javascript" src="station_data.js"></script>
         <script type="text/javascript" src="a2.js"></script>
