--- a/Assignment2/public_html/a2.html
+++ b/Assignment2/public_html/a2.html
@@ -5,7 +5,8 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="a2.css" />
         <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
-        <script type="text/javascript" src="station_data.js"></script>
+        <script type="text/javascript" src="station_data_1.js"></script>
+        <script type="text/javascript" src="station_data_2.js"></script>
         <script type="text/javascript" src="a2_chart1.js"></script>
         <script type="text/javascript" src="a2_chart2.js"></script>
         <script type="text/javascript" src="a2.js"></script>
