--- a/Assignment2/public_html/a2.html
+++ b/Assignment2/public_html/a2.html
@@ -33,5 +33,6 @@
         <p class="section">Task 3 - Question X - Erik</p>
         
         <p class="section">Task 3 - Question X - Rasmus</p>
+        <div class="tooltip"></div>
     </body>
 </html>
