--- a/Assignment3/public_html/a3.html
+++ b/Assignment3/public_html/a3.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="a3.css" />
         <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
+        <script src="libs/jquery.min.js"></script>
         <script type="text/javascript" src="hands.js"></script>
         <script type="text/javascript" src="hands_pca.js"></script>
         <script type="text/javascript" src="a3.js"></script>
@@ -22,5 +23,7 @@
         <p class="section">Chart</p>
         <svg id="chart1" width="50%" height="500"></svg>
         <svg id="chart2" width="50%" height="500"></svg>
+        
+        <p>asdfasfsadf <a class="outlier">outlier</a></p>
     </body>
 </html>
