--- a/Assignment3/public_html/a3.html
+++ b/Assignment3/public_html/a3.html
@@ -58,5 +58,10 @@
             method to determine the most <i>important</i> (causing the most variance) features, and thus, being able to
             navigate the first few principal components can help to find some quick correlations.
         </p>
+        <p class="section">Individual part</p>
+        <ul>
+            <li>Erik - Display the datafile row index as a text-label or a tooltip when the mouse hovers over its point in the PCA panel.</li>
+            <li>Erik - Connect a piece of text in the discussion with the visualization. For example, when the mouse hovers over the discussion about an outlier, then the outlier gets highlighed in the visualization.</li>
+        </ul>
     </body>
 </html>
