--- a/Assignment5/public_html/a5.html
+++ b/Assignment5/public_html/a5.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
+
 <html>
     <head>
+        <title>Assignment 5 report</title>
         <meta charset="UTF-8">
-        <title>My first Three.js app</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="a5.css" type="text/css" rel="stylesheet" />
     </head>
     <body>
-        <script src="libs/three.js"></script>
-        <script src="libs/OrbitControls.js"></script>
-        <!--        <script src="data.js"></script>
-        <script src="a5.js"></script>-->
-        <script src="a52.js"></script>
+        <p class="title center">
+            Interactive Data Exploration<br />
+            Assignment 5 report
+        </p>
+        <p class="center">
+            Erik Hajnal [bgh618]<br /> Rasmus Friis [gjv249]
+        </p>
     </body>
 </html>
