--- a/Final/public_html/final.html
+++ b/Final/public_html/final.html
@@ -4,11 +4,13 @@
         <title>Final project report</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="final.css" />
+        <script type="text/javascript" src="libs/jquery.min.js"></script>
         <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
         <script type="text/javascript" src="data.js"></script>
         <script type="text/javascript" src="final.js"></script>
     </head>
     <body>
+        <div class="tooltip"></div>
         <p class="title center">
             Interactive Data Exploration<br />
             Final project report
