--- a/Final/public_html/final.html
+++ b/Final/public_html/final.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="final.css" />
         <script type="text/javascript" src="libs/jquery.min.js"></script>
-        <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
+        <script type="text/javascript" src="libs/d3.min.js"></script>
         <script type="text/javascript" src="data.js"></script>
         <script type="text/javascript" src="final.js"></script>
     </head>
