Rasmus' Night out
Graph legibility, fullscreen imcomplete.

--- a/Final/public_html/final.html
+++ b/Final/public_html/final.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="final.css" />
         <script type="text/javascript" src="libs/jquery.min.js"></script>
         <script type="text/javascript" src="libs/d3.min.js"></script>
-        <script type="text/javascript" src="data.js"></script>
+        <script type="text/javascript" src="data_full.js"></script>
         <script type="text/javascript" src="final.js"></script>
     </head>
     <body>
