Fix dates and fullscreen

--- a/Final/public_html/final.html
+++ b/Final/public_html/final.html
@@ -11,15 +11,6 @@
     </head>
     <body>
         <div class="tooltip"></div>
-        <p class="title center">
-            Interactive Data Exploration<br />
-            Final project report
-        </p>
-        <p class="center">
-            Erik Hajnal [bgh618]<br /> Rasmus Friis [gjv249]
-        </p>
-
-        <p class="section">Chart 1</p>
-        <svg id="chart1" width="100%" height="500"></svg>
+        <svg id="chart" width="100%" height="100%"></svg>
     </body>
 </html>
