--- a/Final/public_html/final.html
+++ b/Final/public_html/final.html
@@ -7,6 +7,7 @@
         <script type="text/javascript" src="libs/jquery.min.js"></script>
         <script type="text/javascript" src="libs/d3.min.js"></script>
         <script type="text/javascript" src="data_full.js"></script>
+        <script type="text/javascript" src="events.js"></script>
         <script type="text/javascript" src="final.js"></script>
     </head>
     <body>
