--- a/Final/public_html/final.html
+++ b/Final/public_html/final.html
@@ -30,6 +30,7 @@
         <h1>Made by: Rasmus Friis (gjv249), Erik Hajnal (bgh618)</h1> <h2>This visualisation is a graph of Forex entries at the start of the day between 2001 and 2015</h2><h2>Click to remove this message</h2>
     </div>
         <div class="tooltip"></div>
+        <div class="sidebar"></div>
         <svg id="chart" width="100%" height="100%"></svg>
     </body>
 </html>
