--- a/Final/public_html/final.html
+++ b/Final/public_html/final.html
@@ -12,7 +12,7 @@
     </head>
     <body>
     <div class="popup" onclick="this.remove()">
-        <h1>Made by: Rasmus Friis (gjv249), Erik Hajnal (bgh618)</h1> <h2>This visualisation is a graph of Forex entries at the start of the day between 2001 and 2015.</h2><h2>The graph has events lined up as blue circles at the bottom. Click them, or advance through the next / previous buttons (or your arrow keys) to see which events transpired around that time that we found affected the economy.</h2><h2>Click to remove this message.</h2>
+        <h1>Made by: Rasmus Friis (gjv249), Erik Hajnal (bgh618)</h1> <h3>This visualisation is a graph of Forex entries of the EUR - USD exchange rate at the start of the day between 2001 and 2015.</h3><h2>Intent:</h2><p>This graph is an interactive visualisation showing major events that changed or affected the EUR-USD exchange rate significantly.</p><h2>How to use:</h2><p>To view an event, click the blue circles, or advance through the events using the next / previous buttons (or your arrow keys).</p><p>Top left box shows the date and exchange rate for the day that your cursor is on.</p><p>Top right box shows information about your currently selected event.</p><h2>Click to remove this message.</h2>
     </div>
         <div class="tooltip"></div>
         <div class="sidebar"></div>
