--- a/Final/public_html/final.html
+++ b/Final/public_html/final.html
@@ -12,7 +12,18 @@
     </head>
     <body>
     <div class="popup" onclick="this.remove()">
-        <h1>Made by: Rasmus Friis (gjv249) and Erik Hajnal (bgh618)</h1> <h3>This visualisation is a graph of Forex entries of the EUR - USD exchange rate at the start of the day between 2001 and 2015.</h3><h2>Intent:</h2><p>This graph is an interactive visualisation showing major events that changed or affected the EUR-USD exchange rate significantly.</p><h2>How to use:</h2><p>To view an event, click the blue circles, or advance through the events using the next / previous buttons (or your arrow keys).</p><p>Top left box shows the date and exchange rate for the day that your cursor is on.</p><p>Top right box shows information about your currently selected event.</p><h2>Click to remove this message.</h2>
+        <h1>Interactive Data Exploration - Project</h1>
+        <h2>Rasmus Friis (gjv249)<br/> Erik Hajnal (bgh618)</h2>
+        <h3>This visualisation is a graph of forex entries of the EUR - USD exchange rate at the start of the day between 2001 and 2015.</h3>
+        <h2>Intent:</h2>
+        <p>This graph is an interactive visualisation showing major events that changed or affected the EUR-USD exchange rate
+            significantly.</p>
+        <h2>How to use:</h2>
+        <p>To view an event, click the blue circles, or advance through the events using the next / previous buttons
+            (or your arrow keys).</p>
+        <p>Top left box shows the date and exchange rate for the day that your cursor is on.</p>
+        <p>Top right box shows information about your currently selected event.</p>
+        <h2>Click to begin your journey</h2>
     </div>
         <div class="tooltip"></div>
         <div class="sidebar"></div>
