styling and first load bugfix

--- a/Final/public_html/final.html
+++ b/Final/public_html/final.html
@@ -25,8 +25,8 @@
         <p>Top right box shows information about your currently selected event.</p>
         <h2>Click to begin your journey</h2>
     </div>
-        <div class="tooltip"></div>
-        <div class="sidebar"></div>
+        <div id="tooltip" class="panel"></div>
+        <div id="sidebar" class="panel"></div>
         <div id="leftarrow" class="arrow invisible"></div>
         <div id="rightarrow" class="arrow invisible"></div>
         <svg id="chart" width="100%" height="100%"></svg>
