--- a/Final/public_html/final.html
+++ b/Final/public_html/final.html
@@ -11,7 +11,7 @@
         <script type="text/javascript" src="final.js"></script>
     </head>
     <body>
-    <div class="popup" onclick="this.remove()">
+    <div id="popup">
         <h1>Interactive Data Exploration - Project</h1>
         <h2>Rasmus Friis (gjv249)<br/> Erik Hajnal (bgh618)</h2>
         <h3>This visualisation is a graph of forex entries of the EUR - USD exchange rate at the start of the day between 2001 and 2015.</h3>
